--- a/files/leecher/_etc_init_nzbdrone.conf
+++ b/files/leecher/_etc_init_nzbdrone.conf
@@ -2,7 +2,7 @@ author "Simon Tallmyr - Nosscire"
 description "Upstart Script to run NzbDrone as a service on Ubuntu/Debian based systems, as well as others"
 
 #Set username for the process. Should probably be what you use for logging in
-setuid yourusername
+setuid james
 
 #This is the install directory. If you installed using a deb package or the NzbDrone Repository you do not need to change this
 env DIR=/opt/NzbDrone
