--- a/files/leecher/_etc_init_rtorrent.conf
+++ b/files/leecher/_etc_init_rtorrent.conf
@@ -28,7 +28,7 @@ kill timeout 60
 console log
 # Check that rtorrent is ready for daemon mode
 pre-start script
-RT_CONF="$HOME/.rtorrent-rc"
+RT_CONF="$HOME/.rtorrent.rc"
 if ! egrep -v "^\s*#" $RT_CONF | grep "scgi_port" > /dev/null; then
 echo "No scgi_port in rtorrent config $HOME/.rtorrent.rc"
 exit 2
